Added Logo as SVG (fallback to PNG)
Signed-off-by: Claudio Rimann <contact@claudiorimann.ch>

--- a/res/roketi.less
+++ b/res/roketi.less
@@ -19,7 +19,7 @@
 	font-family: "Socialico";
 	font-style: normal;
 	font-weight: normal;
-	src: url("/res/fonts/Socialico.ttf") format("truetype");
+	src: url("fonts/Socialico.ttf") format("truetype");
 }
 
 h2 {
@@ -36,7 +36,9 @@ bold {
 
 
 .navbar-brand {
-	padding: 0;
+	padding: 15px;
+	width: 150px;
+	height: auto;
 }
 
 .navbar-collapse {
@@ -106,7 +108,7 @@ bold {
 	.ico {
 		color: #999;
 		font-family: "Socialico";
-		font-size: 50px;
+		font-size: 1.8em;
 		font-style: normal;
 		font-weight: 400;
 		text-decoration: none;
@@ -129,6 +131,13 @@ bold {
 footer {
 	padding: 20px 0;
 	text-align: center;
+}
+
+.footer-brand {
+	display: block;
+	margin: 0 auto 2em;
+	width: 150px;
+	height: auto;
 }
 
 
