--- a/res/roketi.css
+++ b/res/roketi.css
@@ -5851,7 +5851,7 @@ td.visible-print {
   font-family: "Socialico";
   font-style: normal;
   font-weight: normal;
-  src: url("/res/fonts/Socialico.ttf") format("truetype");
+  src: url("fonts/Socialico.ttf") format("truetype");
 }
 h2 {
   color: #f6bf00;
@@ -5865,7 +5865,9 @@ bold {
   color: #f6bf00;
 }
 .navbar-brand {
-  padding: 0;
+  padding: 15px;
+  width: 150px;
+  height: auto;
 }
 .navbar-collapse {
   padding-top: 15px;
@@ -5922,7 +5924,7 @@ bold {
 .team-member .ico {
   color: #999;
   font-family: "Socialico";
-  font-size: 50px;
+  font-size: 1.8em;
   font-style: normal;
   font-weight: 400;
   text-decoration: none;
@@ -5941,6 +5943,12 @@ bold {
 footer {
   padding: 20px 0;
   text-align: center;
+}
+.footer-brand {
+  display: block;
+  margin: 0 auto 2em;
+  width: 150px;
+  height: auto;
 }
 /* MailChimp */
 #mc_embed_signup {
