--- a/res/roketi.css
+++ b/res/roketi.css
@@ -5980,6 +5980,10 @@ bold {
   padding-left: 0;
   margin: 0;
 }
+.team-member ul li {
+  list-style: none;
+  display: inline;
+}
 .team-member .ico {
   color: #999;
   font-family: "Socialico";
