--- a/res/roketi.less
+++ b/res/roketi.less
@@ -132,6 +132,16 @@ bold {
 }
 
 
+.forkMeRibbon {
+	img {
+		position: absolute;
+		top: 0;
+		right: 0;
+		border: 0;
+		z-index: 2000;
+	}
+}
+
 
 footer {
 	padding: 20px 0;
